# reskit

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
crates/kit-k-means/: Cargo.toml  package.json
crates/kit-k-means/src/: color.rs  color_group.rs  lib.rs
projects/reskit-quick-svelte/: index.html  package.json  tsconfig.json  vite.config.ts
projects/reskit-quick-svelte/src/: App.svelte  ExtractImageColor.svelte  ExtractLocation.svelte  ExtractMathExpression.svelte  ExtractNumber.svelte  ExtractRoom.svelte  app.css
scripts/: dev.ts  new.ts  release.ts
scripts/cli/: templateEntry.ts  templatePackage.ts  templateReadme.ts  templateRollConfig.ts  utils.ts
