[package]
name = "k-means"
version = "1.3.1"
edition = "2021"
description = "kit of k-means algorithm to extract primary color"
repository = "https://github.com/simo-an/reskit.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.4"
